--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
+                        <a class="nav-link me-lg-3" href="#research">RESEARCH</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
+                        <a class="nav-link me-lg-3" href="#teaching">TEACHING</a>
                     </li>
 
                 </ul>
@@ -118,7 +118,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/photo.png">
+            <img class="shadow" src="static/assets/img/photo.jpg">
         </div>
     </div>
     <!-- Photo -->
@@ -135,29 +135,29 @@
     </section>
     <!-- Home -->
 
-    <!-- Publications -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
+    <!-- Research -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="research">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
+                <h2 id="research-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;RESEARCH</h2>
             </header>
-            <div class="main-body" id="publications-md"></div>
+            <div class="main-body" id="research-md"></div>
 
         </div>
     </section>
-    <!-- Publications  -->
+    <!-- Research  -->
 
-    <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
+    <!-- Teaching -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="teaching">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
+                <h2 id="teaching-subtitle"><i class="bi bi-award-fill"></i>TEACHING </h2>
             </header>
-            <div class="main-body" id="awards-md"></div>
+            <div class="main-body" id="teaching-md"></div>
 
         </div>
     </section>
-    <!-- Awards -->
+    <!-- Teaching -->
 
 
     <!-- Footer-->
