--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <header>
                 <h2 id="research-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;RESEARCH</h2>
             </header>
-            <div class="main-body" id="research.md"></div>
+            <div class="main-body" id="research-md">{{ .Content }}</div>
 
         </div>
     </section>
@@ -170,7 +170,7 @@
             <header>
                 <h2 id="teaching-subtitle"><i class="bi bi-award-fill"></i>TEACHING </h2>
             </header>
-            <div class="main-body" id="teaching.md"></div>
+            <div class="main-body" id="teaching-md"></div>
 
         </div>
     </section>
