--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#research">RESEARCH</a>
+                        <a class="nav-link me-lg-3" href="#publications">RESEARCH</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#teaching">TEACHING</a>
+                        <a class="nav-link me-lg-3" href="#awards">TEACHING</a>
                     </li>
 
                 </ul>
